hphp/test/slow/closure/no_properties_get.php.expectf
Fatal error: Closure object cannot have properties in %s/slow/closure/no_properties_get.php on line 7
